--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
-	<link rel="icon" type="image/x-icon" href="Gradpic.jpeg">
+	<title>Document</title>
+    <link rel="icon" type="image/x-icon" href="Gradpic.jpeg">
 	<link rel="stylesheet" href="style.css">
 	<script defer src="main.js"></script>
 </head>
@@ -44,13 +44,13 @@
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-left">
-				<h1>Welcome Back!</h1>
-				<p>To keep connected with us please login with your personal info</p>
+				<h1></h1>
+				<p></p>
 				<button class="ghost" id="signIn">Sign In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
+				<h1></h1>
+				<p></p>
 				<button class="ghost" id="signUp">Sign Up</button>
 				
 			</div>
