--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-    <link rel="icon" type="image/x-icon" href="Gradpic.jpeg">
+	<title>Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="Gradpic.jpeg">
 	<link rel="stylesheet" href="style.css">
 	<script defer src="main.js"></script>
 </head>
