--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="Gradpic.jpeg">
+        <link rel="shortcut icon" type="image/x-icon" href="Gradpic.jpeg">
 	<link rel="stylesheet" href="style.css">
 	<script defer src="main.js"></script>
 </head>
