--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Portfolio</title>
         <link rel="icon" type="image/x-icon" href="Gradpic.jpeg">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	<script defer src="main.js"></script>
 </head>
 <body>
@@ -14,14 +15,15 @@
 		<form action="#">
 			<h1>Create Account</h1>
 			<div class="">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				<a href="#" class="social"><i class=""></i></a>
+				<a href="#" class="social"><i class=""></i></a>
+				<a href="#" class="social"><i class=""></i></a>
 			</div>
 			<span></span>
 			<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="A" id="1" placeholder="Enter Password" />
+		    <span><i id="" class="far fa-eye"></i></span>
 			<a href="" class="button-link">Sign up</a>
 		</form>
 	</div>
@@ -35,7 +37,8 @@
 			</div>
 			<span></span>
 			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="password" id="fakePassword" placeholder="Enter Password" />
+			<span><i id="toggler" class="far fa-eye"></i></span>
 			<a href="#">Forgot your password?</a>
 			<a href="https://laurinceee.github.io/AAIILLLAABYUH.github.io/" class="button-link">Sign in</a>
 
@@ -57,10 +60,6 @@
 		</div>
 	</div>
 </div>
-
-<footer>
-	
-</footer>
 	
 </body>
 </html>
